added category and main colour constant lists

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -5,6 +5,7 @@
     <li>
       <%= link_to item.name, item_path(item) %>
       <%= item.main_colour %>
+      <%= item.main_category %>
       <%= item.description %>
       <%= item.size %>
       <%= link_to "Edit", edit_item_path(item) %>  
