--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -5,8 +5,13 @@
   </p>
   <p>
     <%= f.label :main_colour %><br />
-    <%= f.text_field :main_colour %>
+    <%= f.select(:main_colour, Item::MAIN_COLOUR)%>
   </p>
+  <p>
+    <%= f.label :main_category %><br />
+    <%= f.select(:main_category, Item::MAIN_CATEGORY)%>
+  </p>
+  <p>
     <%= f.label :description %><br />
     <%= f.text_field :description %>
   </p>
